Revert "FileTools.getCharset(): close BufferedInputStream"
This reverts commit d872d370da89fa88e9d25dc0010dbfac94b591fd.